refactor(EIDOMNI-590): Simplify log message in StatusRegistryTokenService and update URL handling in tests